disminuyendo tamaño de letra tabla de detalles (areas inversion)

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -272,7 +272,7 @@
                 </div>
                 <br/>
                 <div class="col-md-12">
-                    <div class="row categorias_inversion">
+                    <div  class="row categorias_inversion">
                         <div class="col-xs-12 col-sm-11 col-md-11">
                             {% for i in inversion_categoria %}
                                 <div class="icons-inversion col-xs-6 col-sm-2 col-md-2 text-center">
@@ -297,13 +297,13 @@
                                             <tbody>
                                             <tr>
                                                 <td>
-                                                    <span class="font-17px">{{ i.asignado|million|intcomma }}</span>
+                                                    <span>{{ i.asignado|million|intcomma }}</span>
                                                 </td>
                                                 <td>
                                                     {% if periodo == 'I' %}
-                                                        <span class="font-17px">0</span>
+                                                        <span>0</span>
                                                     {% else %}
-                                                        <span class="font-17px">{{ i.ejecutado|million|intcomma }}</span>
+                                                        <span>{{ i.ejecutado|million|intcomma }}</span>
                                                         {{ i.ejecutado|div:total_inversion.ejecutado|mul:100|floatformat }}
                                                         %
                                                     {% endif %}
