creando clase css para eliminar outline de los tag a

--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -215,3 +215,4 @@
     position: relative;
 }
 #detail-1 .table > tbody > tr > td { padding: 5px; font-size: 12px; }
+.outline-none {outline: none;}
