--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -216,3 +216,4 @@
 }
 #detail-1 .table > tbody > tr > td { padding: 5px; font-size: 12px; }
 .outline-none {outline: none;}
+.border-bottom-1px{border-bottom: 1px solid #ddd !important;}
