disminuyendo grosor de tabla de detalles con la clase css border-bottom-1px

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -292,8 +292,8 @@
                                                style="color: white;">
                                             <thead>
                                             <tr>
-                                                <th>Inicial</th>
-                                                <th>Ejecutado</th>
+                                                <th class="border-bottom-1px">Inicial</th>
+                                                <th class="border-bottom-1px">Ejecutado</th>
                                             </tr>
                                             </thead>
                                             <tbody>
@@ -336,8 +336,8 @@
                                                            style="color: white;">
                                                         <thead>
                                                         <tr>
-                                                            <th>Inicial</th>
-                                                            <th>Ejecutado</th>
+                                                            <th class="border-bottom-1px">Inicial</th>
+                                                            <th class="border-bottom-1px">Ejecutado</th>
                                                         </tr>
                                                         </thead>
                                                         <tbody>
