--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -244,7 +244,7 @@
     <div class="pma-gradient pma-summary pma-index-inversion-icons">
         <div class="container">
             <div class="row">
-                <div class="col-xs-10">
+                <div class="col-md-11 col-sm-11 col-sm-11">
                     <h2>
                         <strong>Areas</strong>
                         de la Inversi&oacute;n
@@ -275,89 +275,101 @@
                 <div class="col-md-12">
                     <div class="row categorias_inversion">
                         <div class="col-xs-12 col-sm-11 col-md-11">
-                            {% for i in inversion_categoria|slice:'0:6' %}
-                                {% if i.catinversion__destacar %}
-                                    <div class="icons-inversion col-xs-6 col-sm-2 col-md-2 text-center">
-                                        <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.catinversion__id }}"
-                                           class="outline-none">
-                                            <span class="info-box-icon pma-fg-light-green pma-icon {{ i.catinversion__slug }}"></span>
-                                        </a>
-                                        <h5 class="text-center">
+                            {% for i in inversion_categoria|slice:'0:4' %}
+                                <div class="icons-inversion col-xs-6 col-sm-3 col-md-3 text-center">
+                                    <div class="row">
+                                        <div class="col-lg-12 col-md-12 col-sm-12">
                                             <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.catinversion__id }}"
-                                               class="blanco outline-none">
-                                                <span class="info-box-text">{{ i.catinversion__nombre }}</span>
+                                               class="outline-none">
+                                                <span class="info-box-icon pma-fg-light-green pma-icon {{ i.catinversion__slug }}"></span>
                                             </a>
-                                        </h5>
-                                        <table class="table text-center info-box-number mb-1px tb-details"
-                                               style="color: white;">
-                                            <thead>
-                                            <tr>
-                                                <th class="border-bottom-1px">Inicial</th>
-                                                <th class="border-bottom-1px">Ejecutado</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            <tr>
-                                                <td>
-                                                    <span>{{ i.asignado|million|intcomma }}</span>
-                                                </td>
-                                                <td>
-                                                    {% if periodo == 'I' %}
-                                                        <span>0</span>
-                                                    {% else %}
-                                                        <span>{{ i.ejecutado|million|intcomma }}</span>
-                                                        {{ i.ejecutado|div:total_inversion.ejecutado|mul:100|floatformat }}
-                                                        %
-                                                    {% endif %}
-                                                </td>
-                                            </tr>
-                                        </table>
+                                        </div>
+                                        <div class="col-lg-12 col-md-12 col-sm-12">
+                                            <h5 class="text-center">
+                                                <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.catinversion__id }}"
+                                                   class="blanco outline-none">
+                                                    <span class="info-box-text">{{ i.catinversion__nombre }}</span>
+                                                </a>
+                                            </h5>
+                                        </div>
+                                        <div class="col-lg-12 col-md-12 col-sm-12">
+                                            <table class="table text-center info-box-number mb-1px tb-details"
+                                                   style="color: white;margin: auto">
+                                                <thead>
+                                                <tr>
+                                                    <th class="border-bottom-1px">Inicial</th>
+                                                    <th class="border-bottom-1px">Ejecutado</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                <tr>
+                                                    <td>
+                                                        <span>{{ i.asignado|million|intcomma }}</span>
+                                                    </td>
+                                                    <td>
+                                                        {% if periodo == 'I' %}
+                                                            <span>0</span>
+                                                        {% else %}
+                                                            <span>{{ i.ejecutado|million|intcomma }}</span>
+                                                            {{ i.ejecutado|div:total_inversion.ejecutado|mul:100|floatformat }}
+                                                            %
+                                                        {% endif %}
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </div>
                                     </div>
-                                {% endif %}
+                                </div>
                             {% endfor %}
                         </div>
                         <div class="otras-categorias col-md-11">
                             <div class="collapse" id="collapseExample">
                                 <div class="well">
                                     <div class="row">
-                                        {% for i in inversion_categoria|slice:'5:' %}
-                                            {% if not i.catinversion__destacar %}
-                                                <div class="icons-inversion col-xs-6 col-sm-2 col-md-2 text-center">
-                                                    <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.catinversion__id }}">
-                                                        <span class="info-box-icon pma-fg-light-green pma-icon {{ i.catinversion__slug }}"> </span>
-                                                    </a>
-                                                    <h5 class="text-center">
-                                                        <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.id }}"
-                                                           class="blanco">
-                                                            <strong>{{ i.catinversion__nombre }}</strong>
+                                        {% for i in inversion_categoria|slice:'4:' %}
+                                            <div class="icons-inversion col-xs-6 col-sm-3 col-md-3 text-center">
+                                                <div class="row">
+                                                    <div class="col-lg-12 col-md-12 col-sm-12">
+                                                        <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.catinversion__id }}">
+                                                            <span class="info-box-icon pma-fg-light-green pma-icon {{ i.catinversion__slug }}"> </span>
                                                         </a>
-                                                    </h5>
-                                                    <table class="table text-center info-box-number mb-1px tb-details"
-                                                           style="color: white;">
-                                                        <thead>
-                                                        <tr>
-                                                            <th class="border-bottom-1px">Inicial</th>
-                                                            <th class="border-bottom-1px">Ejecutado</th>
-                                                        </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                        <tr>
-                                                            <td>
-                                                                <span class="font-17px">{{ i.asignado|million|intcomma }}</span>
-                                                            </td>
-                                                            <td>
-                                                                {% if periodo == 'I' %}
-                                                                    <span class="font-17px">0</span>
-                                                                {% else %}
-                                                                    <span class="font-17px">{{ i.ejecutado|million|intcomma }}</span>
-                                                                    {{ i.ejecutado|div:total_inversion.ejecutado|mul:100|floatformat }}
-                                                                    %
-                                                                {% endif %}
-                                                            </td>
-                                                        </tr>
-                                                    </table>
+                                                    </div>
+                                                    <div class="col-lg-12 col-md-12 col-sm-12">
+                                                        <h5 class="text-center">
+                                                            <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.id }}"
+                                                               class="blanco">
+                                                                <span>{{ i.catinversion__nombre }}</span>
+                                                            </a>
+                                                        </h5>
+                                                    </div>
+                                                    <div class="col-lg-12 col-md-12 col-sm-12">
+                                                        <table class="table text-center info-box-number mb-1px tb-details"
+                                                               style="color: white;">
+                                                            <thead>
+                                                            <tr>
+                                                                <th class="border-bottom-1px">Inicial</th>
+                                                                <th class="border-bottom-1px">Ejecutado</th>
+                                                            </tr>
+                                                            </thead>
+                                                            <tbody>
+                                                            <tr>
+                                                                <td>
+                                                                    <span>{{ i.asignado|million|intcomma }}</span>
+                                                                </td>
+                                                                <td>
+                                                                    {% if periodo == 'I' %}
+                                                                        <span>0</span>
+                                                                    {% else %}
+                                                                        <span>{{ i.ejecutado|million|intcomma }}</span>
+                                                                        {{ i.ejecutado|div:total_inversion.ejecutado|mul:100|floatformat }}
+                                                                        %
+                                                                    {% endif %}
+                                                                </td>
+                                                            </tr>
+                                                        </table>
+                                                    </div>
                                                 </div>
-                                            {% endif %}
+                                            </div>
                                         {% endfor %}
                                     </div>
                                 </div>
