integrando lista de indicadores a menu principal

--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -81,10 +81,44 @@
                                     Presupuestos Municipales</a></li>
                             </ul>
                         </li>
-                        <li>
-                            <a href="{% url 'budget-summary' %}">Resumen Municipal</a>
-                        </li>
                     </ul>
+                    <form class="navbar-form navbar-left pma-navbar" role="search" id="indicatorfilter" method="GET">
+                        <select class="listado-indicadores pull-right" name="indicator">
+                            <option value=""></option>
+                            <option value="{% url 'origen_ingresos' %}"
+                                    {% if request.resolver_match.url_name == 'origen_ingresos' %}selected{% endif %}>
+                                Origen de los ingresos del municipio
+                            </option>
+                            <option value="{% url 'origen_gastos' %}"
+                                    {% if request.resolver_match.url_name == 'origen_gastos' %}selected{% endif %}>
+                                Destino del gasto municipal
+                            </option>
+                            <option value="{% url 'inversion_categoria' %}"
+                                    {% if request.resolver_match.url_name == 'inversion_categoria' %}selected{% endif %}>
+                                Inversiones
+                            </option>
+                            <option value="{% url 'gastos_funcion' %}"
+                                    {% if request.resolver_match.url_name == 'gastos_funcion' %}selected{% endif %}>
+                                Gastos de funcionamiento
+                            </option>
+                            <option value="{% url 'gastos_personal' %}"
+                                    {% if request.resolver_match.url_name == 'gastos_personal' %}selected{% endif %}>
+                                Gastos de personal
+                            </option>
+                            <option value="{% url 'autonomia_gastos' %}"
+                                    {% if request.resolver_match.url_name == 'autonomia_gastos' %}selected{% endif %}>
+                                Dependencia para asumir gastos corrientes
+                            </option>
+                            <option value="{% url 'ahorro_corriente' %}"
+                                    {% if request.resolver_match.url_name == 'ahorro_corriente' %}selected{% endif %}>
+                                Ahorro corriente para inversiones
+                            </option>
+                            <option value="{% url 'ejecucion_presupuesto' %}"
+                                    {% if request.resolver_match.url_name == 'ejecucion_presupuesto' %}selected{% endif %}>
+                                Ejecuci&oacute;n del presupuesto
+                            </option>
+                        </select>
+                    </form>
                     <form class="navbar-form navbar-left pma-navbar" role="search">
                         <select class="listado-municipios pull-right" name="municipio">
                             <option></option>
@@ -205,6 +239,10 @@
                 placeholder: "Municipios",
                 allowClear: true
             });
+            $('.listado-indicadores').select2({
+                placeholder: 'Resumen Municipal',
+                allowClear: true
+            })
         });
         $(".listado-municipios").on("select2:open", function () {
             $(".select2-search--dropdown .select2-search__field").attr("placeholder", "Escribir el municipio");
@@ -216,6 +254,12 @@
             $(".select2-search--dropdown .select2-search__field").attr("placeholder", "Escribir el municipio");
         });
         $(".municipio").on("select2:close", function () {
+            $(".select2-search--dropdown .select2-search__field").attr("placeholder", null);
+        });
+        $(".listado-indicadores").on("select2:open", function () {
+            $(".select2-search--dropdown .select2-search__field").attr("placeholder", "Escribir el Indicador");
+        });
+        $('.listado-indicadores').on("select2:close", function () {
             $(".select2-search--dropdown .select2-search__field").attr("placeholder", null);
         });
     </script>
