cambiando titulo de Resumen Municipal => Resumen del Municipio

--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -37,7 +37,7 @@
                             <div class="col-xs-9 col-sm-5 col-md-3 indicadores">
                                 <span class="pma-fg-light-green titsearch"><strong>Indicador</strong></span>
                                 <select name="indicador" class="indicator" id="indicator">
-                                    <option value="resumen-municipal">Resumen Municipal</option>
+                                    <option value="resumen-municipal">Resumen del Municipio</option>
                                     <option value="oim" {% if 'oim' in request.GET.indicador %}selected{% endif %}>
                                         Origen de
                                         los ingresos del municipio
