--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -34,10 +34,13 @@
                             </select>
                         </div>
                         {% if request.resolver_match.url_name == 'municipio' %}
-                            <div class="col-xs-9 col-sm-5 col-md-3 indicadores">
+                            <div class="col-xs-9 col-sm-5 col-md-4 indicadores">
                                 <span class="pma-fg-light-green titsearch"><strong>Indicador</strong></span>
                                 <select name="indicador" class="indicator" id="indicator">
-                                    <option value="resumen-municipal">Resumen del Municipio</option>
+                                    <option value="{% url 'budget-summary' %}"
+                                            {% if request.resolver_match.url_name == 'budget-summary' %}selected{% endif %}>
+                                        Resumen del Municipio
+                                    </option>
                                     <option value="{% url 'origen_ingresos' %}"
                                             {% if request.resolver_match.url_name == 'origen_ingresos' %}selected{% endif %}>
                                         Origen de los ingresos del municipio
@@ -72,11 +75,11 @@
                                     </option>
                                 </select>
                             </div>
-                            <input type="hidden" name="municipio" value="{{ municipio.slug }}">
+                            <input type="hidden" name="municipio" id="municipio" value="{{ municipio.slug }}">
                         {% else %}
                             <div class="col-xs-8 col-sm-4 col-md-2">
                                 <span class="pma-fg-light-green titsearch"><strong>MUNICIPIO</strong></span>
-                                <select class="municipio pull-right" name="municipio">
+                                <select class="municipio pull-right" name="municipio" id="municipio">
                                     <optgroup>
                                         <option value="">Todos</option>
                                     </optgroup>
